# crime-sphere

./: .gitignore  CMakeLists.txt  CrimeHeap.cpp  CrimeHeap.h  FileProcessing.cpp  FileProcessing.h  Frame.cpp  Frame.h  Helpers.cpp  Helpers.h  KDTwoTree.cpp  KDTwoTree.h  README.md  UI.cpp  UI.h  main.cpp  node.cpp  node.h
heap/: CrimeHeap.cpp  CrimeHeap.h
kdtree/: KDTwoTree.h
python/: crime.ipynb
